<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.malcolmmachesky.testapp.settingsActivity">


    <Switch
        android:text="@string/RainSounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SoothingNoise"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:onClick="onCheck"
        />

    <Switch
        android:text="@string/MinuteAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/MinuteAlert"
        android:layout_below="@+id/SoothingNoise"
        android:layout_alignStart="@+id/SoothingNoise"
        android:onClick="onCheck"/>

    <Button
        android:text="@string/saveMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="backToMenu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp" />

    <Switch
        android:text="@string/cantStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/CantStop"
        android:onClick="onCheck"
        android:layout_below="@+id/Snooze"
        android:layout_alignStart="@+id/Snooze" />

    <Switch
        android:text="@string/Snooze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:id="@+id/Snooze"
        android:onClick="onCheck"
        android:layout_marginStart="27dp"
        android:layout_below="@+id/MinuteAlert"
        android:layout_alignParentStart="true" />

</RelativeLayout>
