<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alarm_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.malcolmmachesky.testapp.alarmSetActivity">

    <Button
        android:text="@string/TimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TimePickerStart"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TimePickerStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/alarmTime" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AlarmOnOff"
        android:layout_alignBaseline="@+id/TimePickerStart"
        android:layout_alignBottom="@+id/TimePickerStart"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp" />


    <Button
        android:text="@string/NiceRain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarmTime"
        android:layout_marginTop="28dp"
        android:id="@+id/button4"
        android:layout_alignStart="@+id/TimePickerStart"
        android:layout_alignEnd="@+id/TimePickerStart"
        android:onClick="turnOnOffMusic" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RainIO"
        android:onClick="onCheck"
        android:layout_alignTop="@+id/button4"
        android:layout_alignStart="@+id/AlarmOnOff" />

    <Button
        android:text="@string/SleepTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/SleepTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/Sleep1" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/Sleep6"
        android:layout_alignStart="@+id/Sleep5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/Sleep4"
        android:layout_below="@+id/Sleep3"
        android:layout_alignStart="@+id/Sleep3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/Sleep5"
        android:layout_below="@+id/Sleep4"
        android:layout_alignStart="@+id/Sleep4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/Sleep3"
        android:layout_below="@+id/Sleep2"
        android:layout_alignStart="@+id/Sleep2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/Sleep2"
        android:layout_below="@+id/Sleep1"
        android:layout_alignStart="@+id/Sleep1" />

</RelativeLayout>
